--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
-    "@types/node": "20.17.19",
-    "@types/react": "19.0.10",
+    "@types/node": "^20",
+    "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.7.3"
+    "typescript": "^5"
   }
 }
