--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/material": "^6.4.2",
     "@mui/material-nextjs": "^6.4.2",
     "axios": "^1.7.9",
@@ -24,7 +25,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
